--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.3.1"
+  },
+  "resolutions": {
+    "serialize-javascript": "^2.1.1"
   }
 }
